# etbp-backend

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 136f387e965e_make_route_stop_terminal_id_nullable.py  c8f901b1d4d7_initial.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: constants.py  exceptions.py  middleware.py  permissions.py  security.py  validators.py
app/integrations/: firebase.py  google_maps.py  paystack.py  s3.py  ses.py  termii.py
app/models/: __init__.py  banner.py  booking.py  booking_addon.py  corporate.py  dashboard_widget.py  device_token.py  driver.py  email_template.py  lost_found.py  maintenance.py  message.py  notification.py  notification_campaign.py  payment.py  promo_usage.py  review.py  route.py  schedule.py  user.py  vehicle.py
app/schemas/: auth.py  booking.py  common.py  driver.py  payment.py  route.py  schedule.py  user.py  vehicle.py
app/services/: agent_token_service.py  analytics_service.py  audit_service.py  auth_service.py  booking_service.py  dynamic_pricing_service.py  notification_composer_service.py  notification_service.py  payment_service.py  pricing_service.py  push_notification_service.py  route_service.py  schedule_service.py  social_auth_service.py  ticket_service.py  trip_summary_service.py  (+1 more)
scripts/: create_superadmin.py  manual_migrations.sql  post_deploy.sh  seed_data.py  sync_enums.py
tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_bookings.py  test_notifications.py  test_payments.py  test_routes.py
(+51 files in other folders)
